--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,38 @@
   color: #888;
 }
 
+
+
+
+/* Estilos para el modo oscuro */
+.dark-mode {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+
+
+.dark-mode img {
+  filter: invert(0%); /* Invertir los colores de las imágenes dentro de dark-mode */
+}
+
+
+.toggle-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.moon-icon,
+.sun-icon {
+  width: 30px; /* Ajusta el tamaño de los iconos según tus necesidades */
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+.dark-mode .moon-icon {
+  transform: rotate(180deg);
+}
+
+
