--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -1,6 +1,6 @@
-.footer {
+.root {
   background-color: rgb(255, 255, 255);
-  color: #ffffff;
+  color: #b822a9;
   padding: 10px 10px;
   position: relative;
   z-index: 20;
@@ -53,6 +53,7 @@
   width: 300px; /* Cambiado de 120px a 100% para que se ajuste al ancho del contenedor */
   transition: transform 0.5s;
   margin-bottom: 19px;
+  border-radius: 50px;
 }
 
 .footer img:hover {
